# back/src/routes/posts.routes.js
@@ -3,6 +3,7 @@ const { xss } = require('express-xss-sanitizer');
 const  postController  = require('../controllers/post.controller');
 const isGranted = require('../middlewares/security/authenticator');
 const schemaValidator = require('../middlewares/validator/api/schema.validator');
+const multer = require('../middlewares/multer/multer');
 
 
 const router = express.Router();
@@ -13,13 +14,13 @@ const router = express.Router();
 router.get('/', isGranted('ROLE_USER'), postController.getAllPosts);
 
 /** Creat post */
-router.post('/', xss(), isGranted('ROLE_USER'), postController.createPost);
+router.post('/', xss(), isGranted('ROLE_USER'), multer, postController.createPost);
 
 /** Get one Post by id */
-router.get('/:id', isGranted('ROLE_USER'), postController.getOnePost);
+router.get('/:id', isGranted('ROLE_USER'), postController.getPostById);
 
 /**Update Post by id */
-router.put('/:id', xss(),isGranted('ROLE_USER'), postController.updatePost);
+router.put('/:id', xss(),isGranted('ROLE_USER'), multer, postController.updatePost);
 
 /** Delete Post by id */
 router.delete('/:id',isGranted('ROLE_USER'), postController.deletePost);
